# shellcode

./: .gitignore  CMakeLists.txt  Shellcode.c  authentication.php  log.php  login.php  logout.php  makefile  refresh.php  send_reserve.php  system.php  test.php
armkernal/: build.sh
lib/: sudo
refactor/: ColorSolver.hh
src/: caller.c  test.cpp  utility.c
src/include/: utility.h
src/utility/: CMakeLists.txt  caller.c  utility.c
src/web/: config.m4
src/web/php5/: php.ini  php_web_so.h  web_so.c
src/web/php7/: config.m4  php.ini  php_web_so.h  web_so.c
src/web/web_so/: CMakeLists.txt  hello.c  hello.h
test/: README.md
thirdpart/boost/: build.sh
thirdpart/httpd/: build.sh  build_so.sh  httpd.conf
thirdpart/thrift/: build.sh
